# algorithms-in-c

./: CMakeLists.txt  Makefile  README.md  TroubleShooting.txt
doc/dot_language_subset/: index.html
examples/Ch01-Foundamentals/DoublyLinkedList/: CMakeLists.txt  DoublyLinkedList.pro  main.c
examples/Ch01-Foundamentals/ExpressionEvaluation/: CMakeLists.txt  ExpressionEvaluation.pro  main.c
examples/Ch01-Foundamentals/IntegerSequence/: CMakeLists.txt  IntegerSequence.pro  main.c
examples/Ch01-Foundamentals/IntrusiveLinkedList/: CMakeLists.txt  IntrusiveLinkedList.pro  main.c
examples/Ch01-Foundamentals/PolynomialAddition/: CMakeLists.txt  Polynomial.c  Polynomial.h  PolynomialAddition.pro  main.c
examples/Ch01-Foundamentals/SinglyLinkedList/: CMakeLists.txt  SinglyLinkedList.pro  main.c
examples/Ch01-Foundamentals/StopWatch/: CMakeLists.txt  StopWatch.pro  main.c
examples/Ch01-Foundamentals/WeightedQuickUnion/: CMakeLists.txt  WeightedQuickUnion.pro  main.c
examples/Ch01-Foundamentals/WeightedQuickUnion/samples/: sample-medium.txt  sample-small.txt
examples/Ch02-Sorting/HeapSort1-PriorityQueue/: CMakeLists.txt  HeapSort1.pro  main.c
examples/Ch02-Sorting/HeapSort2-IndexPriorityQueue/: CMakeLists.txt  HeapSort2.pro  main.c
examples/Ch02-Sorting/HeapUpdateKey/: CMakeLists.txt  HeapUpdateKey.pro  main.c
examples/Ch02-Sorting/QuickSort-Performance/: CMakeLists.txt  main.c
examples/Ch02-Sorting/QuickSort-Sorting/: CMakeLists.txt  main.c
examples/Ch02-Sorting/QuickSort1-Sorting/: CMakeLists.txt  QuickSort1.pro  main.c
examples/Ch02-Sorting/QuickSort2-DoublingTime/: CMakeLists.txt  QuickSort2.pro  main.c
examples/Ch02-Sorting/QuickSort3-PartitionSchemes/: CMakeLists.txt  Makefile  QuickSort3.pro  main.c
examples/Ch03-Searching/BinarySearchTree1-Insertion/: BST1.pro  CMakeLists.txt  main.c
examples/Ch03-Searching/BinarySearchTree1-Insertion/samples/: sample.txt
examples/Ch03-Searching/BinarySearchTree2-Deletion/: BST2.pro  CMakeLists.txt  main.c
examples/Ch03-Searching/FrequencyCounter/: CMakeLists.txt  FrequencyCounter.pro  Makefile  README.md  main.c  scanner.l  tale.txt
examples/Ch03-Searching/SymbolTable/: CMakeLists.txt  SymbolTable.pro  main.c
examples/Ch04-Graphs/BreadthFirstSearch/: BFS.pro  CMakeLists.txt  main.c
examples/Ch04-Graphs/BreadthFirstSearch/samples/: sample1.txt
examples/Ch04-Graphs/ConnectedComponents/: CMakeLists.txt  ConnectedComponents.pro  main.c
examples/Ch04-Graphs/ConnectedComponents/samples/: sample1.dot  sample1.txt
examples/Ch04-Graphs/DepthFirstSearch1-Recursive/: CMakeLists.txt  DFS1.pro  main.c
examples/Ch04-Graphs/DepthFirstSearch1-Recursive/samples/: sample2.txt
examples/Ch04-Graphs/DepthFirstSearch2-Nonrecursive/: CMakeLists.txt  DFS2.pro  main.c
examples/Ch04-Graphs/DepthFirstSearch3-IncorrectNonrecursive/: CMakeLists.txt  DFS3.pro  depth-first-search-algorithms.txt  main.c
examples/Ch04-Graphs/DepthFirstSearch3-IncorrectNonrecursive/samples/: sample3.txt
examples/Ch04-Graphs/FindingPaths-BFS/: BFSPath.pro  CMakeLists.txt  main.c
examples/Ch04-Graphs/FindingPaths-DFS/: CMakeLists.txt  DFSPath.pro  main.c
examples/Ch04-Graphs/MinimumSpanningTree-Kruskal/: CMakeLists.txt  Kruskal.pro  main.c
examples/Ch04-Graphs/MinimumSpanningTree-Kruskal/samples/: sample-medium.txt  sample-small.dot  sample-small.txt
examples/Ch04-Graphs/MinimumSpanningTree-PrimUsingLinearSearch/: CMakeLists.txt  Prim1.pro  main.c
examples/Ch04-Graphs/MinimumSpanningTree-PrimUsingPriorityQueue/: CMakeLists.txt  Prim2.pro  main.c
examples/Ch04-Graphs/ShortestPaths-BellmanFordUsingEdgeList/: Bellman1.pro  CMakeLists.txt  main.c
examples/Ch04-Graphs/ShortestPaths-BellmanFordUsingEdgeList/samples/: sample2.txt
examples/Ch04-Graphs/ShortestPaths-BellmanFordUsingQueue/: Bellman2.pro  CMakeLists.txt  main.c
examples/Ch04-Graphs/ShortestPaths-BellmanFordUsingQueue/samples/: sample1.txt
examples/Ch04-Graphs/ShortestPaths-CriticalPath/: CMakeLists.txt  CriticalPath.pro  main.c
examples/Ch04-Graphs/ShortestPaths-CriticalPath/samples/: sample1.txt
examples/Ch04-Graphs/ShortestPaths-DijkstraUsingLinearSearch/: CMakeLists.txt  Dijkstra1.pro  dijkstra-algorithm  main.c
examples/Ch04-Graphs/ShortestPaths-DijkstraUsingLinearSearch/samples/: sample1.txt  sample2.txt
examples/Ch04-Graphs/ShortestPaths-DijkstraUsingPriorityQueue/: CMakeLists.txt  Dijkstra2.pro  Makefile  main.c
examples/Ch04-Graphs/ShortestPaths-NegativeCycleDetection/: Bellman3.pro  CMakeLists.txt  main.c
examples/Ch04-Graphs/ShortestPaths-NegativeCycleDetection/samples/: sample-negative-cycle.txt
examples/Ch04-Graphs/StronglyConnectedComponents-Kosaraju/: CMakeLists.txt  Kosaraju.pro  main.c
examples/Ch04-Graphs/StronglyConnectedComponents-Kosaraju/samples/: sample2.txt  sample3.txt
examples/Ch04-Graphs/StronglyConnectedComponents-Tarjan/: CMakeLists.txt  Tarjan.pro  main.c
examples/Ch04-Graphs/StronglyConnectedComponents-Tarjan/samples/: sample1.txt  sample2.dot
examples/Ch04-Graphs/TopologicalSort/: CMakeLists.txt  TopologicalSort.pro  main.c
examples/Ch04-Graphs/TopologicalSort/samples/: sample1.dot  sample1.txt
include/: BinarySearchTree.h  Common.h  DisjointSet.h  DoublyLinkedList.h  EdgeListGraph.h  Graph.h  GraphReader.h  HashCode.h  IndexPriorityQueue.h  IntegerSequence.h  IntrusiveLinkedList.h  PriorityQueue.h  Queue.h  SinglyLinkedList.h  Stack.h  StopWatch.h  SymbolTable.h  Vector.h
src/: BinarySearchTree.c  DisjointSet.c  DoublyLinkedList.c  EdgeListGraph.c  Graph.c  GraphReader.c  HashCode.c  IntegerSequence.c  IntrusiveLinkedList.c  SinglyLinkedList.c  StopWatch.c  SymbolTable.c
tools/: Makefile
