CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(algorithms)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")

ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/DoublyLinkedList)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/ExpressionEvaluation)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/IntegerSequence)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/IntrusiveLinkedList)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/PolynomialAddition)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/SinglyLinkedList)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/StopWatch)
ADD_SUBDIRECTORY(examples/Ch01-Foundamentals/WeightedQuickUnion)

ADD_SUBDIRECTORY(examples/Ch02-Sorting/HeapSort1-PriorityQueue)
ADD_SUBDIRECTORY(examples/Ch02-Sorting/HeapSort2-IndexPriorityQueue)
ADD_SUBDIRECTORY(examples/Ch02-Sorting/HeapUpdateKey)
ADD_SUBDIRECTORY(examples/Ch02-Sorting/QuickSort1-Sorting)
ADD_SUBDIRECTORY(examples/Ch02-Sorting/QuickSort2-DoublingTime)
ADD_SUBDIRECTORY(examples/Ch02-Sorting/QuickSort3-PartitionSchemes)

ADD_SUBDIRECTORY(examples/Ch03-Searching/BinarySearchTree1-Insertion)
ADD_SUBDIRECTORY(examples/Ch03-Searching/BinarySearchTree2-Deletion)
ADD_SUBDIRECTORY(examples/Ch03-Searching/FrequencyCounter)
ADD_SUBDIRECTORY(examples/Ch03-Searching/SymbolTable)

ADD_SUBDIRECTORY(examples/Ch04-Graphs/BreadthFirstSearch)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ConnectedComponents)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/DepthFirstSearch1-Recursive)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/DepthFirstSearch2-Nonrecursive)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/DepthFirstSearch3-IncorrectNonrecursive)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/FindingPaths-BFS)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/FindingPaths-DFS)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/MinimumSpanningTree-Kruskal)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/MinimumSpanningTree-PrimUsingLinearSearch)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/MinimumSpanningTree-PrimUsingPriorityQueue)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ShortestPaths-BellmanFordUsingEdgeList)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ShortestPaths-BellmanFordUsingQueue)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ShortestPaths-NegativeCycleDetection)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ShortestPaths-CriticalPath)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ShortestPaths-DijkstraUsingLinearSearch)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/ShortestPaths-DijkstraUsingPriorityQueue)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/StronglyConnectedComponents-Kosaraju)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/StronglyConnectedComponents-Tarjan)
ADD_SUBDIRECTORY(examples/Ch04-Graphs/TopologicalSort)
